--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,7 +2,7 @@ name: run main.py
 
 on:
   schedule:
-    - cron: '00-59/30 8-20/1 * * *' # At 00:00 on Monday
+    - cron: '00-59/3 * * * *' # At 00:00 on Monday
 
 jobs:
   build:
