--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,31 +1,34 @@
+---
 name: run main.py
-
 on:
   schedule:
-    - cron: '00-59/30 8-20/1 * * *' # At 00:00 on Monday
-
+    - cron: 00-59/30 8-20/1 * * *
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-
       - name: checkout repo content
-        uses: actions/checkout@v2 # checkout the repository content to github runner
-
+        uses: actions/checkout@v2
       - name: setup python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.9' # install the python version needed
-          
+          python-version: "3.9"
       - name: install python packages
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          
-     - name: Commit and push
-        run: |     
-            git config user.name "${GITHUB_ACTOR}"
-            git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
-            git add unique_date_added.json  # or git add -A to add all files
-            git commit -m "Updated unique_date_added.json"  # change this message if you want
-            git push "https://${GITHUB_ACTOR}:${TOKEN}@github.com/${GITHUB_REPOSITORY}.git" HEAD:main || exit 0
+      - name: Commit and push
+        run: |
+          git config user.name "${GITHUB_ACTOR}"
+
+
+          git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+
+
+          git add unique_date_added.json  # or git add -A to add all files
+
+
+          git commit -m "Updated unique_date_added.json"  # change this message if you want
+
+
+          git push "https://${GITHUB_ACTOR}:${TOKEN}@github.com/${GITHUB_REPOSITORY}.git" HEAD:main || exit 0
