--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -25,7 +25,7 @@ jobs:
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
 
 
-          git add unique_date_added.json  # or git add -A to add all files
+          git add -A  # or git add -A to add all files
 
 
           git commit -m "Updated unique_date_added.json"  # change this message if you want
