--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -17,6 +17,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+      - name: read unique_date_added.json
+        run: cat unique_date_added.json
       - name: Commit and push
         run: >
           git config user.name "${GITHUB_ACTOR}"
