--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -21,7 +21,18 @@ jobs:
         run: cat unique_date_added.json
       - name: run main.py
         run: python main.py 
+      - name: Commit and push  
+        run: |
+          git config user.name "${GITHUB_ACTOR}"
+          git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+          git add DailyScrapingData.csv  # or git add -A to add all files
+          git commit -m "Updated DailyScrapingData.csv"  # change this message if you want
+          git push "https://${GITHUB_ACTOR}:${TOKEN}@github.com/${GITHUB_REPOSITORY}.git" HEAD:main || exit 0
      
-
+      - name: Push changes
+      uses: ad-m/github-push-action@v0.6.0
+      with:
+        github_token: ${{ github.token }}
+        tags: true
 
   
