--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -25,8 +25,8 @@ jobs:
         run: |
           git config user.name "${GITHUB_ACTOR}"
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
-          git add DailyScrapingData.csv  # or git add -A to add all files
-          git commit -m "Updated DailyScrapingData.csv"  # change this message if you want
+          git add unique_date_added.json  # or git add -A to add all files
+          git commit -m "Updated unique_date_added.json"  # change this message if you want
           git push "https://${GITHUB_ACTOR}:${TOKEN}@github.com/${GITHUB_REPOSITORY}.git" HEAD:main || exit 0
      
       - name: Push changes
