--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,7 +1,7 @@
 name: run main.py
 on:
   schedule:
-    - cron: 00-59/2 8-20/1 * * *
+    - cron: */3 * * * *
 jobs:
   build:
     runs-on: ubuntu-latest
