--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,7 +2,7 @@ name: run main.py
 
 on:
   schedule:
-    - cron: '*/1 * * * *'
+    - cron: '00-59/3 * * * *'
 jobs:
   build:
     runs-on: ubuntu-latest
