--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,7 +2,7 @@ name: run Yad2search
 
 on:
   schedule:
-    - cron: '0-57/3 6-21 * * *'
+    - cron: '*/30 6-21 * * *'
 jobs:
   build:
     runs-on: ubuntu-latest
